# pytbox

./: .gitignore  AGENTS.md  CLI_USAGE.md  README.md  env-deploy.sh  exec.py  publish.sh  pyproject.toml
.cursor/: rules.general.mdc
.devcontainer/: Dockerfile.dev  debian.sources  devcontainer.json  pip.conf
.github/workflows/: publish.yml
docs/: dida365.md  feishu.md  testing.md
docs/adr/: 2026-02-feishu.md
examples/: ping_alert_integration.py
scripts/ci/: version_from_tag.py
skills/spec-adr-rollup/: SKILL.md
src/pytbox/: __init__.py  base.py  dida365.py  excel.py  mingdao.py  notion.py  onepassword_connect.py  onepassword_sa.py  pyjira.py  victoriametrics.py  vmware.py
tests/: base.py  conftest.py  promql.txt  test_aliyun.py  test_dida365.py  test_feishu.py  test_load_config.json  test_load_jsonfile.py  test_logger.py  test_netbox.py  test_onepassword_connect.py  test_publish_script.py  test_victorialog.py  test_victoriametrics.py  test_volc.py
tests/alert/: test_alert_handler.py  test_ping.py  test_resolved.py  test_traffic.py
tests/alicloud/: test_sls.py
tests/categraf/: instances.toml
tests/ci/: test_version_from_tag.py
tests/cli/: test_network_commands.py
tests/cloud/: test_aliyun_cloud_contract.py  test_aliyun_sls_contract.py  test_rest_contracts.py  test_volc_cloud_contract.py
tests/dev_file/: 1.json  response.json  response.pkl  response.txt  save_response_examples.py
tests/feishu/: test_client_contract.py  test_endpoints_contract.py  test_token_cache.py
tests/live/: conftest.py  run_dida365_live.py  run_feishu_live.py  (+4 more)
(+103 files in other folders)
