[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytbox"
version = "0.1.0"
description = "A collection of Python integrations and utilities (Feishu, Dida365, VictoriaMetrics, ...)"
authors = [{ name = "你的名字", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "requests>=2.0",
    "pydantic>=1.10"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["src"]